Fixed invisible sidebar elements causing unwanted hover states

--- a/src/assets/styles/cmps/Sidebar.scss
+++ b/src/assets/styles/cmps/Sidebar.scss
@@ -62,7 +62,7 @@
 		}
 
 		&:not(.hovered) > *:not(.toggle-sidebar) {
-			// visibility: hidden;
+			visibility: hidden;
 			opacity: 0;
 			transition: opacity 0.1s ease 0s;
 		}
